...
                            .fill(Color.white)
                            .shadow(radius: 4)
                        Text("Análisis del ejercicio:")
                            .font(.title3)
                            .fontWeight(.bold)
                            .padding()
                            .accessibilityIdentifier("feedbackViewLabel")
                    }
                    .padding(.horizontal)

                    // 🔹 Card 2: Repeticiones
                    ZStack {
                        RoundedRectangle(cornerRadius: 10)
...
