...
                    Text("Finalizar Evaluación")
                        .padding()
                        .frame(maxWidth: .infinity)
                        .background(Color.red)
                        .foregroundColor(.white)
                        .cornerRadius(12)
                        .accessibilityIdentifier("FinalizarEvaluationButton")
                }
                .padding(.horizontal, 20)
                .padding(.bottom, 10)
                }
            }
            .frame(width: geometry.size.width)
...
